kube/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: sethfinal
  name: advfrontend-service
spec:
  type: ClusterIP
  selector:
    app: advfrontend  # Matches the app label from the Deployment
  ports:
    - port: 80          # Port exposed by the service
      targetPort: 80      # The container port (should match the container's port in the deployment file)
